deploy/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pulselog
  namespace: pulselog
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - pulselog.example.com
        - api.pulselog.example.com
        - ingest.pulselog.example.com
      secretName: pulselog-tls
  rules:
    - host: pulselog.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dashboard
                port:
                  number: 3000
    - host: api.pulselog.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: query-api
                port:
                  number: 8082
    - host: ingest.pulselog.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ingestion-api
                port:
                  number: 8080
